--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -1,55 +1,52 @@
-body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  background: #FFFFFF;
-  color: #1d1d1d;
-  font-size: 16px;
-  font-family: system-ui;
-  font-weight: 400;
-  line-height: 1.2;
-  overflow-x: hidden;
+@import "tailwindcss";
+
+@layer base {
+  body {
+    height: 100vh;
+    color: var(--color-gray-950);
+    background-color: var(--color-white);
+    font-size: 16px;
+    font-family: var(--font-mono);
+    font-weight: 400;
+    overflow-x: hidden;
+    /* scroll-behavior: smooth; */
+  }
+  #root {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .app {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+  }
+  input, textarea {
+    outline: none;
+  }
+
+  /* ... */
 }
 
-* {
-  box-sizing: border-box;
+@theme {
+  --font-display: "your_font", "sans-serif";
+
+  /* breakpoints */
+  --breakpoint-3xl: 120rem;
+
+  /* colors */
+  --color-your: #baeabd
+
+  /* ... */
 }
 
-h1, h2, h3, h4, h5, h6, p {
-  margin: 0;
+@theme extend {
+  --font-family-display: Poppins, sans-serif; 
 }
 
-input, button, textarea {
-  outline: none;
-  border: none;
-}
-
-#root {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-header {
-  margin: 16px 0;
-}
-
-main {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
-
-a {
-  text-decoration: none;
-  transition: color .3s ease;
-}
-
-a:hover {
-  color: #000877ee;
-}
-
-ul li {
-  padding: 0;
-  list-style-type: none;
+/* your custom utilities */
+@utility container {
+  max-width: 1440px;
+  margin-inline: auto;
+  padding-inline: 1.25rem;
 }
